# rpg-engine

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  hitbox_config.json  spritesheet-description.md
assets/clusters/: dev_cluster.json  town.json
assets/maps/: dev_map.json
classes/Dwarf/: Archer.json  Hunter.json  Mage.json  Peasant.json  Priest.json  Swordsman.json  Valkyrie.json  Warlock.json
classes/Elf/: Archer.json  Hunter.json  Mage.json  Peasant.json  Priest.json  Swordsman.json  Valkyrie.json  Warlock.json
classes/Human/: Archer.json  Hunter.json  Mage.json  Peasant.json  Priest.json  Swordsman.json  Valkyrie.json  Warlock.json
classes/Skeleton/: Archer.json  Hunter.json  Mage.json  Peasant.json  Priest.json  Swordsman.json  Valkyrie.json  Warlock.json
docs/: biomes.md  game-direction.md  map-editor-refactor.md  systems-roadmap.md  town_gate_system_docs.md
migrations/: 001_init.sql
scratch/: gate_probe.rs
src/: animation.rs  effects.rs  input.rs  lib.rs  main.rs  player.rs
src/core/: animation.rs  camera.rs  mod.rs
src/entities/: character.rs  effects.rs  enemy.rs  item.rs  mod.rs  player.rs
src/net/: client.rs  protocol.rs
src/systems/: cluster_editor.rs  hitbox_editor.rs  indicators.rs  input.rs  mod.rs
src/ui/: character_creator.rs  combat_text.rs  hud.rs  mod.rs
src/world/: chunk.rs  cluster.rs  environment.rs  mod.rs  pathfinding.rs
tests/: e2e_test.rs
