[package]
name = "rpg_engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
macroquad = "0.4"
egui-macroquad = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
pathfinding = "4.3"
rand = "0.8"
gltf = "1.4"
postgres = { version = "0.19", features = ["with-serde_json-1"] }